--- a/css/styles.css
+++ b/css/styles.css
@@ -10322,7 +10322,7 @@ header.masthead .masthead-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: #febf36;
 }
 .timeline > li .timeline-image h4 {
   font-size: 10px;
